--- a/package.json
+++ b/package.json
@@ -2,20 +2,23 @@
   "name": "tkpmhdt_be",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -r dotenv/config server.js"
   },
-  "author": "",
+  "author": "tkpmhdt_nhom4",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.22"
   },
   "dependencies": {
     "body-parser": "^1.20.2",
-    "dotenv": "^16.0.3",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
-    "mysql": "^2.18.1"
+    "mysql2": "^3.2.3",
+    "sequelize": "^6.31.0"
   }
 }
