--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
     "sequelize": "^6.31.0"
   }
