--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "joi": "^17.9.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
     "sequelize": "^6.31.0"
