--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-DB_HOST="localhost"
-DB_USER="nbphuoc"
+DB_HOST="db4free.net"
+DB_USER="tkpmoop_4"
 DB_PASS="male0011"
-DB_NAME="nodejs_api"
-SECRET_KEY="0xe9e7cea3dedca5984780bafc599bd69add087d56"
+DB_NAME="bookstore_tkpm_4"
 PORT = 3000
 
-
+SECRET_KEY="0xe9e7cea3dedca5984780bafc599bd69add087d56"
