--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST="db4free.net"
-DB_USER="tkpmoop_4"
+DB_HOST="localhost"
+DB_USER="root"
 DB_PASS="male0011"
-DB_NAME="bookstore_tkpm_4"
+DB_NAME="nodejs_api"
 PORT = 3000
 
 SECRET_KEY="0xe9e7cea3dedca5984780bafc599bd69add087d56"
